fix results overlap

--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 * {
     box-sizing: border-box;
 }
-
-body {
-    background-image: url(https://images-na.ssl-images-amazon.com/images/I/61GJHS7W7lL._SL1083_.jpg);
-    padding-top: 250px;
+.header {
+    height: 200px;
+    background-color: #b9d94a;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1 {
     padding-left: 22px;
     padding-top: 15px;
     font-size: 35px;
+}
+
+body {
+    background-image: url(https://images-na.ssl-images-amazon.com/images/I/61GJHS7W7lL._SL1083_.jpg);
+    padding-top: 250px;
 }
 
 .article {
@@ -22,19 +28,10 @@ h1 {
     padding-top: 60px;
 }
 
-.fieldset {
-   
-}
-
 #songResults{
     visibility: hidden;
     font-weight: normal;
     font-size: 28px;
+    margin-top: 75px;
 }
 
-.header {
-    height: 200px;
-    background-color: #b9d94a;
-    color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
